<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_forgotpassword_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_forgotpassword_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/tv_forgotpassword_title_text"
            android:textSize="@dimen/tv_20sp_textsize"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tv_forgotpassword_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:text="@string/tv_forgotpassword_description_text"
        android:textSize="@dimen/tv_forgotpassword_description_textsize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_forgotpassword_toolbar" />

    <EditText
        android:id="@+id/et_forgotpassowrd_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:hint="@string/et_login_email_hint"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/et_16sp_textsize"
        app:layout_constraintEnd_toEndOf="@+id/tv_forgotpassword_description"
        app:layout_constraintStart_toStartOf="@+id/tv_forgotpassword_description"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgotpassword_description" />

    <Button
        android:id="@+id/btn_forgotpassword_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:paddingTop="@dimen/btn_8dp_padding"
        android:paddingBottom="@dimen/btn_8dp_padding"
        android:text="@string/btn_forgotpassowrd_submit_text"
        android:textSize="@dimen/btn_18sp_textsize"
        app:layout_constraintEnd_toEndOf="@+id/et_forgotpassowrd_email"
        app:layout_constraintStart_toStartOf="@+id/et_forgotpassowrd_email"
        app:layout_constraintTop_toBottomOf="@+id/et_forgotpassowrd_email" />

    <LinearLayout
        android:id="@+id/ll_register_logintoaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_forgotpassword_submit">

        <TextView
            android:id="@+id/tv_forgotpassword_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/tv_5dp_padding"
            android:text="@string/tv_forgotpassword_back_text"
            android:textSize="@dimen/tv_16sp_textsize"/>

        <TextView
            android:id="@+id/tv_forgotpassword_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/tv_5dp_padding"
            android:text="@string/tv_forgotpassword_login_text"
            android:textStyle="bold"
            android:textSize="@dimen/tv_16sp_textsize"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>