<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


<!--    <androidx.appcompat.widget.Toolbar-->
<!--        android:id="@+id/toolbar_register_activity"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->

    <!--    </androidx.appcompat.widget.Toolbar>-->

<!--    <ScrollView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="164dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="1.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/toolbar_register_activity">-->


    <!--            app:layout_constraintTop_toBottomOf="@id/til_register_password">-->


    <TextView
        android:id="@+id/tv_register_title"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="center"
        android:text="@string/tv_register_title_text"
        android:textSize="@dimen/tv_20sp_textsize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_register_firstname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/til_register_firstname_hint"
        android:inputType="text"
        android:padding="@dimen/et_16dp_padding"
        android:textSize="@dimen/et_16sp_textsize"
        app:layout_constraintEnd_toEndOf="@+id/tv_register_title"
        app:layout_constraintStart_toStartOf="@+id/tv_register_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_title" />

    <EditText
        android:id="@+id/et_register_lastname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/til_register_lastname_hint"
        android:inputType="text"
        android:padding="@dimen/et_16dp_padding"
        android:textSize="@dimen/et_16sp_textsize"
        app:layout_constraintEnd_toEndOf="@+id/et_register_firstname"
        app:layout_constraintStart_toStartOf="@+id/et_register_firstname"
        app:layout_constraintTop_toBottomOf="@+id/et_register_firstname" />
    <!--            app:layout_constraintEnd_toTopOf="@+id/et_register_lastname" />-->


    <EditText
        android:id="@+id/et_register_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/til_register_email_hint"
        android:inputType="textEmailAddress"
        android:padding="@dimen/et_16dp_padding"
        android:textSize="@dimen/et_16sp_textsize"
        app:layout_constraintEnd_toEndOf="@+id/et_register_lastname"
        app:layout_constraintStart_toStartOf="@+id/et_register_lastname"
        app:layout_constraintTop_toBottomOf="@+id/et_register_lastname" />

    <EditText
        android:id="@+id/et_register_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/til_register_password_hint"
        android:inputType="textPassword"
        android:padding="@dimen/et_16dp_padding"
        android:textSize="@dimen/et_16sp_textsize"
        app:layout_constraintEnd_toEndOf="@+id/et_register_email"
        app:layout_constraintStart_toStartOf="@+id/et_register_email"
        app:layout_constraintTop_toBottomOf="@+id/et_register_email" />

    <EditText
        android:id="@+id/et_register_confirmpassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/til_register_confirmpassword_hint"
        android:inputType="textPassword"
        android:padding="@dimen/et_16dp_padding"
        android:textSize="@dimen/et_16sp_textsize"
        app:layout_constraintEnd_toEndOf="@+id/et_register_password"
        app:layout_constraintStart_toStartOf="@+id/et_register_password"
        app:layout_constraintTop_toBottomOf="@+id/et_register_password" />

    <Button
        android:id="@+id/btn_register_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:padding="@dimen/btn_8dp_padding"
        android:text="@string/btn_register_register_text"
        android:textSize="@dimen/btn_18sp_textsize"
        app:layout_constraintEnd_toEndOf="@+id/et_register_confirmpassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_register_confirmpassword"
        app:layout_constraintTop_toBottomOf="@+id/et_register_confirmpassword" />
    <!--        app:layout_constraintTop_toBottomOf="@id/cb_register_termsandcondition" />-->

    <LinearLayout
        android:id="@+id/ll_register_logintoaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_register_register">

        <TextView
            android:id="@+id/tv_register_alreadyhaveanaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/tv_5dp_padding"
            android:text="@string/tv_register_alreadyhaveanaccount_text"
            android:textSize="@dimen/tv_16sp_textsize"/>

        <TextView
            android:id="@+id/tv_register_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/tv_5dp_padding"
            android:text="@string/tv_register_login_text"
            android:textStyle="bold"
            android:textSize="@dimen/tv_16sp_textsize"/>
    </LinearLayout>

    <!--            <com.google.android.material.textfield.TextInputLayout-->
        <!--                android:id="@+id/til_register_confirmpassword"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
        <!--                android:layout_marginStart="16dp"-->
        <!--                android:layout_marginTop="25dp"-->
        <!--                android:layout_marginEnd="16dp"-->
        <!--                android:hint="@string/til_register_confirmpassword_hint"-->
        <!--                app:layout_constraintEnd_toEndOf="parent"-->
        <!--                app:layout_constraintStart_toStartOf="parent"-->
        <!--                app:layout_constraintTop_toBottomOf="@id/til_register_password">-->

        <!--                <EditText-->
        <!--                    android:id="@+id/et_register_confirmpassword"-->
        <!--                    android:layout_width="match_parent"-->
        <!--                    android:layout_height="wrap_content"-->
        <!--                    android:inputType="textPassword"-->
        <!--                    android:padding="@dimen/et_16dp_padding"-->
        <!--                    android:textSize="@dimen/et_16sp_textsize"/>-->
        <!--            </com.google.android.material.textfield.TextInputLayout>-->

        <!--            <CheckBox-->
        <!--                android:id="@+id/cb_register_termsandcondition"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_marginTop="16dp"-->
        <!--                android:checked="false"-->
        <!--                android:text="@string/cb_register_termsandcondition_text"-->
        <!--                app:layout_constraintEnd_toEndOf="parent"-->
        <!--                app:layout_constraintStart_toStartOf="parent"-->
        <!--                app:layout_constraintTop_toBottomOf="@id/til_register_confirmpassword"/>-->

        <!--            <Button-->
        <!--                android:id="@+id/btn_register_register"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_marginStart="16dp"-->
        <!--                android:layout_marginTop="32dp"-->
        <!--                android:layout_marginEnd="16dp"-->
        <!--                android:padding="@dimen/btn_8dp_padding"-->
        <!--                android:text="@string/btn_register_register_text"-->
        <!--                android:textSize="@dimen/btn_18sp_textsize"-->
        <!--                app:layout_constraintEnd_toEndOf="parent"-->
        <!--                app:layout_constraintStart_toStartOf="parent"-->
        <!--                app:layout_constraintTop_toBottomOf="@id/cb_register_termsandcondition" />-->

        <!--            <LinearLayout-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_marginTop="32dp"-->
        <!--                android:orientation="horizontal"-->
        <!--                app:layout_constraintEnd_toEndOf="parent"-->
        <!--                app:layout_constraintStart_toStartOf="parent"-->
        <!--                app:layout_constraintTop_toBottomOf="@id/btn_register_register">-->

        <!--                <TextView-->
        <!--                    android:id="@+id/tv_register_alreadyhaveanaccount"-->
        <!--                    android:layout_width="wrap_content"-->
        <!--                    android:layout_height="wrap_content"-->
        <!--                    android:text="@string/tv_register_alreadyhaveanaccount_text"-->
        <!--                    android:textSize="@dimen/tv_16sp_textsize"/>-->

        <!--                <TextView-->
        <!--                    android:id="@+id/tv_register_login"-->
        <!--                    android:layout_width="wrap_content"-->
        <!--                    android:layout_height="wrap_content"-->
        <!--                    android:padding="@dimen/tv_5dp_padding"-->
        <!--                    android:text="@string/tv_register_login_text"-->
        <!--                    android:textStyle="bold"-->
        <!--                    android:textSize="@dimen/tv_16sp_textsize"/>-->
        <!--            </LinearLayout>-->

        <!--        </androidx.constraintlayout.widget.ConstraintLayout>-->

<!--    </ScrollView>-->


</androidx.constraintlayout.widget.ConstraintLayout>